fix: third try to make scrollbar in iOS above content

--- a/src/components/Main/Body/Body.css
+++ b/src/components/Main/Body/Body.css
@@ -5,5 +5,5 @@
 
     /* for safari on iOS */
     position: fixed;
-    overflow: visible;
+    overflow: scroll;
 }
